package OpenClosed;

public interface Weapon {
	
	int getCost();
	void log();
	void listItems();

}
